--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=width-device initial-scale=1">
-     <link rel="stylesheet" href="Documents/solutions/css.css">
+     <link rel="stylesheet" href="./css.css">
 <!--<tittle>menu project</tittle> -->
     </head>
     <body>
