--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=width-device initial-scale=1">
-     <link rel="stylesheet" href="./css.css">
+     <link href='./css.css' rel='stylesheet' type='text/css'/>
+        <script src="./script.js"></script
 <!--<tittle>menu project</tittle> -->
     </head>
     <body>
