--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=width-device initial-scale=1">
-     <link rel='stylesheet' type='text/css href="Documents/css.css"/>
-        <script src="./script.js"></script
+     <link rel='stylesheet' type='text/css' href="css.css"/>
+        <script src="./script.js"></script>
 <!--<tittle>menu project</tittle> -->
     </head>
     <body>
